// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/panel/panelHeader/main > should render 1`] = `
<div
  className="body-109"
>
  <div
    className="msla-panel-header"
    id="Node Title"
  >
    <div
      className="msla-panel-card-header"
    >
      <div
        className="fui-Spinner rpp59a7 msla-card-header-spinner"
        role="progressbar"
      >
        <span
          className="fui-Spinner__spinner rvgcg50 ___ruqntd0_k4fqbj0 fjamq6b f64fuq3 f1v3ph3m"
        >
          <span
            className="fui-Spinner__spinnerTail rxov3xa"
          />
        </span>
      </div>
      <div
        className="msla-panel-card-title-container"
      >
        <div
          className="ms-TextField ms-TextField--borderless msla-card-title root-111"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-112"
            >
              <input
                aria-invalid={false}
                aria-label="Card title"
                className="ms-TextField-field field-113"
                id="nodeId-title"
                maxLength={80}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                type="text"
                value="Node Title"
              />
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Close"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-automation-id="msla-panel-header-close-nav"
        data-tabster="{"restorer":{"type":0}}"
        id="msla-panel-header-close-nav"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`lib/panel/panelHeader/main > should render with panel header buttons 1`] = `
<div
  className="body-109"
>
  <div
    className="msla-panel-header"
    id="Node Title"
  >
    <div
      className="msla-panel-card-header"
    >
      <div
        className="fui-Spinner rpp59a7 msla-card-header-spinner"
        role="progressbar"
      >
        <span
          className="fui-Spinner__spinner rvgcg50 ___ruqntd0_k4fqbj0 fjamq6b f64fuq3 f1v3ph3m"
        >
          <span
            className="fui-Spinner__spinnerTail rxov3xa"
          />
        </span>
      </div>
      <div
        className="msla-panel-card-title-container"
      >
        <div
          className="ms-TextField ms-TextField--borderless msla-card-title root-111"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-112"
            >
              <input
                aria-invalid={false}
                aria-label="Card title"
                className="ms-TextField-field field-113"
                id="nodeId-title"
                maxLength={80}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                type="text"
                value="Node Title"
              />
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Close"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-automation-id="msla-panel-header-close-nav"
        data-tabster="{"restorer":{"type":0}}"
        id="msla-panel-header-close-nav"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-panel-header-buttons"
  >
    <button
      className="fui-Button r1alrhcs"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
      Submit from this action
    </button>
    <button
      className="fui-Button r1alrhcs"
      onClick={[Function]}
      type="button"
    >
      Show Logic App run details
      <span
        className="fui-Button__icon rywnvv2 ___1yz413i_pen21v0 f1a695kz"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`lib/panel/panelHeader/main > should render with panel header menu 1`] = `
<div
  className="body-109"
>
  <div
    className="msla-panel-header"
    id="Node Title"
  >
    <div
      className="msla-panel-card-header"
    >
      <div
        className="fui-Spinner rpp59a7 msla-card-header-spinner"
        role="progressbar"
      >
        <span
          className="fui-Spinner__spinner rvgcg50 ___ruqntd0_k4fqbj0 fjamq6b f64fuq3 f1v3ph3m"
        >
          <span
            className="fui-Spinner__spinnerTail rxov3xa"
          />
        </span>
      </div>
      <div
        className="msla-panel-card-title-container"
      >
        <div
          className="ms-TextField ms-TextField--borderless msla-card-title root-111"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-112"
            >
              <input
                aria-invalid={false}
                aria-label="Card title"
                className="ms-TextField-field field-113"
                id="nodeId-title"
                maxLength={80}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                type="text"
                value="Node Title"
              />
            </div>
          </div>
        </div>
      </div>
      <button
        aria-haspopup="menu"
        aria-label="More commands"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-automation-id="msla-panel-header-more-options"
        data-tabster="{"restorer":{"type":1}}"
        id="menur3"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onMouseOver={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        role="button"
        tabIndex={0}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
      <button
        aria-label="Close"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-automation-id="msla-panel-header-close-nav"
        data-tabster="{"restorer":{"type":0}}"
        id="msla-panel-header-close-nav"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`lib/panel/panelHeader/main > should render with panel header trigger info message 1`] = `
<div
  className="body-109"
>
  <div
    className="msla-panel-header"
    id="Node Title"
  >
    <div
      className="msla-panel-card-header"
    >
      <div
        className="fui-Spinner rpp59a7 msla-card-header-spinner"
        role="progressbar"
      >
        <span
          className="fui-Spinner__spinner rvgcg50 ___ruqntd0_k4fqbj0 fjamq6b f64fuq3 f1v3ph3m"
        >
          <span
            className="fui-Spinner__spinnerTail rxov3xa"
          />
        </span>
      </div>
      <div
        className="msla-panel-card-title-container"
      >
        <div
          className="ms-TextField ms-TextField--borderless msla-card-title root-111"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-112"
            >
              <input
                aria-invalid={false}
                aria-label="Card title"
                className="ms-TextField-field field-113"
                id="nodeId-title"
                maxLength={80}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                type="text"
                value="Node Title"
              />
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Close"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-automation-id="msla-panel-header-close-nav"
        data-tabster="{"restorer":{"type":0}}"
        id="msla-panel-header-close-nav"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-panel-header-messages"
  >
    <div
      aria-label="Trigger name update message information bar"
      aria-labelledby="fui-ra"
      className="fui-MessageBar r2oyxsj ___1jsax0e_zcmvgw0 f6juhto f1s2louj f1ngh7ph f17g0uqy f1w7oly7"
      data-automation-id="msla-panel-header-trigger-info"
      data-testid="msla-panel-header-trigger-info"
      role="group"
    >
      <div
        className="fui-MessageBar__icon r1df1z33"
      >
        <svg
          aria-hidden={true}
          className="___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 10a8 8 0 1 0-16 0 8 8 0 0 0 16 0ZM9.5 8.91a.5.5 0 0 1 1 0V13.6a.5.5 0 0 1-1 0V8.9Zm-.25-2.16a.75.75 0 1 1 1.5 0 .75.75 0 0 1-1.5 0Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className="fui-MessageBarBody rtatq2b"
      >
        Changing the trigger name updates the callback URL when you save the workflow.
      </div>
      <div
        className="fui-MessageBarActions__containerAction rgzw8nq"
      >
        <button
          aria-label="Dismiss trigger info message"
          className="fui-Button r1alrhcs ___5ap6rb0_kajqcr0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f17fgpbq fu97m5z ft85np5 fy9rknc figsok6 fwrc4pm fazmxh f1jt17bm"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2 ___hix1za0_wgffxm0 fe5j1ua fjamq6b f64fuq3 fbaiahx"
          >
            <span
              data-icon-name="DismissRegular"
            />
          </span>
        </button>
      </div>
      <div
        className="fui-MessageBarActions r1t4x98y ___1ro4i4z_1qf3nin f1e8xxv9 f1gaxbfw fqcjy3b fibjyge f1p3vkop fjseox"
      />
      <div
        className="fui-MessageBar__bottomReflowSpacer r1vx593n"
      />
    </div>
  </div>
  <div
    className="msla-panel-header-buttons"
  >
    <button
      className="fui-Button r1alrhcs"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
      Submit from this action
    </button>
    <button
      className="fui-Button r1alrhcs"
      onClick={[Function]}
      type="button"
    >
      Show Logic App run details
      <span
        className="fui-Button__icon rywnvv2 ___1yz413i_pen21v0 f1a695kz"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
  </div>
</div>
`;
